Cleaned and formatted code